# manage-photo-back

./: .env  .gitignore  README.md
src/: init.py  main.py  pyproject.toml
src/controller/: auth.py  movie.py
src/core/: JWTBearer.py  aws_cognito.py  config.py  dependencies.py  jwt.py  logging.py
src/domain/entity/: movie.py  test.py  test_user.py  user.py
src/middleware/: exception_handler.py
src/repository/: __init__.py  movie_repo.py  test_repo.py
src/schema/response/: error_response.py
src/usecase/: __init__.py
src/usecase/interface/: __init__.py  i_movie_repo.py
src/usecase/movie/: add_movie.py  edit_movie.py  get_movie.py  get_movie_detail.py  get_movie_list.py  query_movie_list.py
src/usecase/service/: auth_service.py
